--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -20,6 +20,8 @@
 	<true/>
 	<key>EnableDivisionView</key>
 	<false/>
+	<key>EnterCopyModeAutomatically</key>
+	<false/>
 	<key>GlobalKeyMap</key>
 	<dict>
 		<key>0x19-0x60000</key>
@@ -2356,6 +2358,10 @@
 	<integer>10</integer>
 	<key>TerminalVMargin</key>
 	<integer>5</integer>
+	<key>TripleClickSelectsFullWrappedLines</key>
+	<false/>
+	<key>UIElementRequiresHotkeys</key>
+	<true/>
 	<key>UseBorder</key>
 	<true/>
 	<key>VisualIndicatorForEsc</key>
