--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -6,6 +6,8 @@
 	<false/>
 	<key>AlternateMouseScroll</key>
 	<true/>
+	<key>BadgeTopMargin</key>
+	<integer>20</integer>
 	<key>Default Bookmark Guid</key>
 	<string>6AD86B52-539D-43E7-99AB-7C3723B4CCEC</string>
 	<key>DimBackgroundWindows</key>
@@ -16,6 +18,8 @@
 	<true/>
 	<key>DisableFullscreenTransparency</key>
 	<false/>
+	<key>DisablePotentiallyInsecureEscapeSequences</key>
+	<true/>
 	<key>EnableAPIServer</key>
 	<true/>
 	<key>EnableDivisionView</key>
@@ -151,6 +155,8 @@
 	<true/>
 	<key>LeftCommand</key>
 	<integer>7</integer>
+	<key>LeftOption</key>
+	<integer>2</integer>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -448,13 +454,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.26666666666666666</real>
+				<real>0.93725490196078431</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.2196078431372549</real>
+				<real>0.68627450980392157</real>
 				<key>Red Component</key>
-				<real>0.19607843137254902</real>
+				<real>0.38039215686274508</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -1174,7 +1180,7 @@
 			<key>Title Components</key>
 			<integer>259</integer>
 			<key>Transparency</key>
-			<real>0.041843417553191493</real>
+			<real>0.0076346409574468265</real>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
@@ -1183,6 +1189,8 @@
 			<true/>
 			<key>Use Cursor Guide</key>
 			<false/>
+			<key>Use Custom Tab Title</key>
+			<true/>
 			<key>Use Custom Window Title</key>
 			<false/>
 			<key>Use Italic Font</key>
@@ -1549,7 +1557,7 @@
 			<key>Guid</key>
 			<string>97F0F9E0-5913-4DFF-8E3A-689D56D0AB7F</string>
 			<key>Has Hotkey</key>
-			<true/>
+			<false/>
 			<key>Horizontal Spacing</key>
 			<real>1</real>
 			<key>HotKey Activated By Modifier</key>
