--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@ exec --no-startup-id xset r rate 200 35
 exec --no-startup-id /usr/libexec/gsd-xsettings
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
-exec --no-startup-id setxkbmap -option caps:escape
+exec --no-startup-id "setxkbmap -option caps:escape"
 
 exec_always --no-startup-id ~/.config/polybar/launch.sh &
 exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpaper/wallpaper_by_thaomaoh_dewko4o.png
@@ -42,7 +42,7 @@ bindsym $sup+space exec alacritty
 # kill focused window
 bindsym $sup+w kill
 # kill all focused window
-bindsym $sup+q [class=".*"] kill
+# bindsym $sup+q [class=".*"] kill
 
 # start rofi (a program launcher)
 bindsym $mod+d exec --no-startup-id rofi -show drun -show-icons
