--- a/i3/config
+++ b/i3/config
@@ -10,6 +10,8 @@ exec --no-startup-id /usr/libexec/gsd-xsettings
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 exec --no-startup-id "setxkbmap -option caps:escape"
+exec --no-startup-id ~/.config/i3/monitor_switch.sh &
+
 
 exec_always --no-startup-id ~/.config/polybar/launch.sh &
 exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpaper/wallpaper_by_thaomaoh_dewko4o.png
@@ -45,8 +47,8 @@ bindsym $sup+w kill
 # bindsym $sup+q [class=".*"] kill
 
 # start rofi (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show drun -show-icons
-bindsym $mod+Shift+d exec --no-startup-id rofi -show combi -show-icons
+bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/scripts/launcher.sh
+bindsym $mod+Shift+d exec --no-startup-id $HOME/.config/rofi/scripts/s_launcher.sh
 
 # change focus
 bindsym $mod+h focus left
@@ -128,7 +130,7 @@ bindsym Mod1+Shift+p move container to output left; workspace prev
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "/home/alex/.config/rofi/powermenu.sh"
+bindsym $mod+Shift+e exec $HOME/.config/rofi/scripts/powermenu.sh
 
 # # resize window (you can also use the mouse for that)
 # mode "resize" {
