--- a/i3/config
+++ b/i3/config
@@ -5,13 +5,12 @@ set $ctrl Control
 font pango:monospace 8
 
 exec --no-startup-id dex --autostart --environment i3
-exec --no-startup-id xset r rate 200 35
+exec --no-startup-id xset r rate 210 50
 exec --no-startup-id /usr/libexec/gsd-xsettings
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
-exec --no-startup-id "setxkbmap -option caps:escape"
+exec --no-startup-id setxkbmap -option caps:escape
 exec --no-startup-id ~/.config/i3/monitor_switch.sh &
-
 
 exec_always --no-startup-id ~/.config/polybar/launch.sh &
 exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpaper/wallpaper_by_thaomaoh_dewko4o.png
