--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -60,7 +60,7 @@ font:
   glyph_offset:
     x: 0
     y: 0
-  size: 10.0
+  size: 8.0
 
 scrolling:
   history: 5000
@@ -80,4 +80,4 @@ window:
   padding:
     x: 6
     y: 6
-  transparency: 0.9
+  opacity: 0.99
