--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,4 +1,8 @@
-corner-radius = 6
+corner-radius = 10
+backend = "glx";
+blur-method = "dual_kawase"; // or "dual_kawase", choose as per preference
+blur-strength = 3; // adjust the strength as needed
+
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "QTILE_INTERNAL:32c = 1"
