--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,9 +1,15 @@
 corner-radius = 10
 backend = "glx";
 blur-method = "dual_kawase"; // or "dual_kawase", choose as per preference
-blur-strength = 3; // adjust the strength as needed
+blur-strength = 4; // adjust the strength as needed
 
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "QTILE_INTERNAL:32c = 1"
+]
+
+# Application-specific settings; these override the default `active-opacity`
+opacity-rule = [
+    "100:class_g = 'scratch'",
+    "85:class_g = 'Alacritty'"
 ];
