--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,7 +1,7 @@
 corner-radius = 10
 backend = "glx";
-blur-method = "dual_kawase"; // or "dual_kawase", choose as per preference
-blur-strength = 4; // adjust the strength as needed
+blur-method = "dual_kawase"; 
+blur-strength = 4; 
 
 rounded-corners-exclude = [
   "window_type = 'dock'",
@@ -11,5 +11,6 @@ rounded-corners-exclude = [
 # Application-specific settings; these override the default `active-opacity`
 opacity-rule = [
     "100:class_g = 'scratch'",
-    "85:class_g = 'Alacritty'"
+    "85:class_g = 'Alacritty'",
+    "90:class_g = 'WebApp-Teams3693'"
 ];
