--- a/tmux/conf/keybind.conf
+++ b/tmux/conf/keybind.conf
@@ -1,8 +1,7 @@
 ################################################################ KEY BINDINGS__
 # Note: that the -n means we can ignore the ctrl-a prefix
 
-# Set Ctrl-z as the default prefix
-set-option -g prefix C-z
+set -g prefix ^A
 
 # Reload the tmux file
 bind r source-file "$tmux_dir/tmux.conf"
