--- a/tmux/conf/skin_shared.conf
+++ b/tmux/conf/skin_shared.conf
@@ -18,14 +18,6 @@ set -g @route_to_ping "vultr.net"   # Use a UK based site to ping
 set -g @online_icon "#[fg=$color_gray]"
 set -g @offline_icon "#[fg=$color_red]"
 
-# tmux-pomodoro
-set -g @pomodoro_on "  #[fg=$color_red] "
-set -g @pomodoro_complete "  #[fg=$color_green] "
-set -g @pomodoro_pause "  #[fg=$color_yellow] "
-set -g @pomodoro_prompt_break "  #[fg=$color_green] ?"
-set -g @pomodoro_prompt_pomodoro "  #[fg=$color_red] ?"
-set -g @pomodoro_interval_display "#[fg=$color_gray]|#[fg=italics]%s"
-
 # tmux-battery
 set -g @batt_icon_charge_tier8 ""
 set -g @batt_icon_charge_tier7 ""
@@ -48,7 +40,7 @@ set -g @batt_remain_short true
 
 set -g status on
 set -g status-justify centre
-set -g status-position bottom
+set -g status-position top       
 set -g status-left-length 90
 set -g status-right-length 90
 set -g status-style "bg=$color_fg"
