--- a/tmux/conf/opts.conf
+++ b/tmux/conf/opts.conf
@@ -1,29 +1,15 @@
 # utf8 is on
 setw -q -g utf8 on
 
-# Fix colors and enable true color support and italics
 set -g default-terminal "tmux-256color"
-
-# Tell Tmux that outside terminal supports true color
-# set-option -sa terminal-features ',xterm-kitty:RGB'
 set-option -sa terminal-overrides ",xterm*:Tc"
-
-# Use the mouse
-set -g mouse on
-
-# Sticky time after repeated commands
 set -sg repeat-time 500
-
-# Start numbering at 1 for windows and panes
-set -g base-index 1
 setw -g pane-base-index 1
-
-# Automatically rename windows based on the application within
 setw -g automatic-rename on
-
-# Renumber windows if others are closed
-set -g renumber-windows on
-
-# Use titles in tabs
-set -g set-titles on
-
+set -g base-index 1              # start indexing windows at 1 instead of 0
+set -g detach-on-destroy off     # don't exit from tmux when closing a session
+set -g escape-time 0             # zero-out escape time delay
+set -g history-limit 1000000     # increase history size (from 2,000)
+set -g renumber-windows on       # renumber all windows when any window is closed
+set -g set-clipboard on          # use system clipboard
+setw -g mode-keys vi
