--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,27 +1,15 @@
+#################################### OPTIONS ###################################
 tmux_dir="~/.config/tmux"
 tmux_conf_dir="$tmux_dir/conf"
 tmux_plugins_dir="$tmux_dir/plugins"
 
 ################################## CONF FILES ##################################
 source "$tmux_conf_dir/opts.conf"
-# source "$tmux_conf_dir/keybind.conf"
+source "$tmux_conf_dir/keybind.conf"
 source "$tmux_conf_dir/skin.conf"
-# source-file ~/.config/tmux/tmux.reset.conf
 
-# set-option -g default-terminal 'screen-254color'
-# set-option -g terminal-overrides ',xterm-256color:RGB'
-
-set -g prefix ^A
-set -g base-index 1              # start indexing windows at 1 instead of 0
-set -g detach-on-destroy off     # don't exit from tmux when closing a session
-set -g escape-time 0             # zero-out escape time delay
-set -g history-limit 1000000     # increase history size (from 2,000)
-set -g renumber-windows on       # renumber all windows when any window is closed
-set -g set-clipboard on          # use system clipboard
-set -g status-position top       
-setw -g mode-keys vi
-# set -g pane-active-border-style 'fg=magenta,bg=default'
-# set -g pane-border-style 'fg=brightblack,bg=default'
+#################################### PLUGINS ###################################
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$tmux_plugins_dir"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-cpu'              # Display CPU performance
@@ -32,4 +20,4 @@ set -g @plugin 'tmux-plugins/tmux-sensible'         # Sensible defaults
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'    # Display current tmux mode
 set -g @plugin 'tmux-plugins/tmux-online-status'    # Are we connected to the internet?!
 
-run '~/.local/share/tmux/plugins/tpm/tpm'
+run "$tmux_plugins_dir/tpm/tpm"
