--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,9 +4,9 @@ tmux_conf_dir="$tmux_dir/conf"
 tmux_plugins_dir="$tmux_dir/plugins"
 
 ################################## CONF FILES ##################################
-source "$tmux_conf_dir/opts.conf"
-source "$tmux_conf_dir/keybind.conf"
-source "$tmux_conf_dir/skin.conf"
+source "$tmux_conf_dir/tmux.opts.conf"
+source "$tmux_conf_dir/tmux.keybind.conf"
+source "$tmux_conf_dir/tmux.skin.conf"
 
 #################################### PLUGINS ###################################
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$tmux_plugins_dir"
@@ -19,5 +19,11 @@ set -g @plugin 'tmux-plugins/tmux-battery'          # Battery status in tmux
 set -g @plugin 'tmux-plugins/tmux-sensible'         # Sensible defaults
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'    # Display current tmux mode
 set -g @plugin 'tmux-plugins/tmux-online-status'    # Are we connected to the internet?!
+set -g @plugin 'omerxx/tmux-online-status'    # Are we connected to the internet?!
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
 run "$tmux_plugins_dir/tpm/tpm"
