--- a/tmux/conf/tmux.skin.conf
+++ b/tmux/conf/tmux.skin.conf
@@ -11,4 +11,4 @@ color_buffer="#939aa3"
 color_selection="#3e4452"
 color_light_gray="#5c6370"
 
-source "$tmux_conf_dir/skin_shared.conf"
+source "$tmux_conf_dir/tmux.skin_shared.conf"
