--- a/tmux/conf/tmux.skin_shared.conf
+++ b/tmux/conf/tmux.skin_shared.conf
@@ -1,9 +1,9 @@
 #################################### PLUGINS ###################################
 
 mode_separator=""
-set -g @mode_indicator_empty_prompt " TMUX #[default]#[fg=$color_fg]$mode_separator"
+set -g @mode_indicator_empty_prompt " #S #[default]#[fg=$color_fg]$mode_separator"
 set -g @mode_indicator_empty_mode_style fg=$color_purple,bold
-set -g @mode_indicator_prefix_prompt " TMUX #[default]#[fg=$color_blue]$mode_separator"
+set -g @mode_indicator_prefix_prompt " #S #[default]#[fg=$color_blue]$mode_separator"
 set -g @mode_indicator_prefix_mode_style fg=$color_bg,bg=$color_blue,bold
 set -g @mode_indicator_copy_prompt " COPY #[default]#[fg=$color_green]$mode_separator"
 set -g @mode_indicator_copy_mode_style fg=$color_bg,bg=$color_green,bold
