--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -4,12 +4,10 @@
 set -g prefix ^A
 set -g xterm-keys on
 
-# Reload the tmux file
 bind R source-file "$tmux_dir/tmux.conf"
-
-# Windows
-# bind w kill-window
+bind * list-clients
 bind w list-windows
+
 ################# WINDOW MANAGEMENT #################
 bind r command-prompt "rename-window %%"
 bind -n M-Left  previous-window
