--- a/tmux/conf/tmux.skin_shared.conf
+++ b/tmux/conf/tmux.skin_shared.conf
@@ -13,11 +13,6 @@ set -g @mode_indicator_sync_mode_style fg=$color_bg,bg=$color_red,bold
 # tmux cpu
 set -g @cpu_percentage_format "%3.0f%%"
 
-# tmux-online-status
-set -g @route_to_ping "vultr.net"   # Use a UK based site to ping
-set -g @online_icon "#[fg=$color_gray]"
-set -g @offline_icon "#[fg=$color_red]"
-
 # tmux-battery
 set -g @batt_icon_charge_tier8 ""
 set -g @batt_icon_charge_tier7 ""
@@ -51,12 +46,12 @@ set -g pane-active-border fg=$color_gray
 set -g pane-border-style fg=$color_gray
 
 set -g message-style bg=$color_blue,fg=$color_bg
-setw -g window-status-separator "   "
+setw -g window-status-separator "  "
 set-window-option -g mode-style bg=$color_purple,fg=$color_bg
 
 #################################### FORMAT ####################################
 
-set -g status-left "#{tmux_mode_indicator} #{online_status}  #[fg=$color_gray]%R#{pomodoro_status}"
-set -g status-right "#[fg=$color_gray]#{battery_icon_charge}  #{battery_percentage}#{battery_icon_status}#{battery_remain}  CPU:#{cpu_percentage} "
+set -g status-left "#{tmux_mode_indicator}"
+set -g status-right "#[fg=$color_gray]#{battery_icon_charge}  #{battery_percentage}#{battery_icon_status}#{battery_remain}  CPU:#{cpu_percentage}  #[fg=$color_gray]%R#{pomodoro_status}"
 setw -g window-status-format "#[fg=$color_gray,italics]#I: #[noitalics]#W"
 setw -g window-status-current-format "#[fg=$color_purple,italics]#I: #[fg=$color_buffer,noitalics,bold]#W"
