screenkey no blur

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,6 +8,10 @@ rounded-corners-exclude = [
   "QTILE_INTERNAL:32c = 1"
 ]
 
+blur-background-exclude = [
+    "class_g = 'Screenkey'"
+];
+
 # Application-specific settings; these override the default `active-opacity`
 opacity-rule = [
     "100:class_g = 'scratch'",
