tmux and quality of life

--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -1,12 +1,20 @@
 ################################################################ 
 # Note: that the -n means we can ignore the ctrl-a prefix
 
-set -g prefix ^A
+set -g prefix ^F
 set -g xterm-keys on
 
 bind R source-file "$tmux_dir/tmux.conf"
 bind * list-clients
 bind w list-windows
+
+bind a run-shell "edit-tmux-output"
+
+bind C-s display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    sed '/^$/d' |\
+    fzf --border=none --reverse |\
+    xargs tmux switch-client -t"
 
 ################# WINDOW MANAGEMENT #################
 bind r command-prompt "rename-window %%"
@@ -22,6 +30,9 @@ bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
 bind -n M-3 select-window -t 3
 bind -n M-4 select-window -t 4
+
+bind n command-prompt -p "New window name:" "new-window -n '%%'"
+
 ################# PANE MANAGEMENT #################
 # Move to pane
 bind -r h select-pane -L
