--- a/tmux/conf/tmux.skin_shared.conf
+++ b/tmux/conf/tmux.skin_shared.conf
@@ -1,35 +1,35 @@
 #################################### PLUGINS ###################################
 
-mode_separator=""
+mode_separator=""
 set -g @mode_indicator_empty_prompt " #S #[default]#[fg=$color_fg]$mode_separator"
 set -g @mode_indicator_empty_mode_style fg=$color_purple,bold
-set -g @mode_indicator_prefix_prompt " #S #[default]#[fg=$color_blue]$mode_separator"
-set -g @mode_indicator_prefix_mode_style fg=$color_bg,bg=$color_blue,bold
+set -g @mode_indicator_prefix_prompt " #S #[default]#[fg=$color_fg]$mode_separator"
+set -g @mode_indicator_prefix_mode_style fg=$color_dark_yellow,bold
 set -g @mode_indicator_copy_prompt " COPY #[default]#[fg=$color_green]$mode_separator"
-set -g @mode_indicator_copy_mode_style fg=$color_bg,bg=$color_green,bold
+set -g @mode_indicator_copy_mode_style fg=$color_green,bold
 set -g @mode_indicator_sync_prompt " SYNC #[default]#[fg=$color_red]$mode_separator"
 set -g @mode_indicator_sync_mode_style fg=$color_bg,bg=$color_red,bold
 
 # tmux cpu
 set -g @cpu_percentage_format "%3.0f%%"
 
-# tmux-battery
-set -g @batt_icon_charge_tier8 ""
-set -g @batt_icon_charge_tier7 ""
-set -g @batt_icon_charge_tier6 ""
-set -g @batt_icon_charge_tier5 ""
-set -g @batt_icon_charge_tier4 ""
-set -g @batt_icon_charge_tier3 ""
-set -g @batt_icon_charge_tier2 ""
-set -g @batt_icon_charge_tier1 ""
+# # tmux-battery
+# set -g @batt_icon_charge_tier8 ""
+# set -g @batt_icon_charge_tier7 ""
+# set -g @batt_icon_charge_tier6 ""
+# set -g @batt_icon_charge_tier5 ""
+# set -g @batt_icon_charge_tier4 ""
+# set -g @batt_icon_charge_tier3 ""
+# set -g @batt_icon_charge_tier2 ""
+# set -g @batt_icon_charge_tier1 ""
 
-set -g @batt_icon_status_charged " "
-set -g @batt_icon_status_charging "  "
-set -g @batt_icon_status_discharging " "
-set -g @batt_icon_status_attached " "
-set -g @batt_icon_status_unknown " "
+# set -g @batt_icon_status_charged " "
+# set -g @batt_icon_status_charging "  "
+# set -g @batt_icon_status_discharging " "
+# set -g @batt_icon_status_attached " "
+# set -g @batt_icon_status_unknown " "
 
-set -g @batt_remain_short true
+# set -g @batt_remain_short true
 
 #################################### OPTIONS ###################################
 
@@ -52,6 +52,6 @@ set-window-option -g mode-style bg=$color_purple,fg=$color_bg
 #################################### FORMAT ####################################
 
 set -g status-left "#{tmux_mode_indicator}"
-set -g status-right "#[fg=$color_gray]#{battery_icon_charge}  #{battery_percentage}#{battery_icon_status}#{battery_remain}  CPU:#{cpu_percentage}  #[fg=$color_gray]%R#{pomodoro_status}"
+set -g status-right "#[fg=$color_gray]CPU:#{cpu_percentage}  #[fg=$color_gray]%R"
 setw -g window-status-format "#[fg=$color_gray,italics]#I: #[noitalics]#W"
 setw -g window-status-current-format "#[fg=$color_purple,italics]#I: #[fg=$color_buffer,noitalics,bold]#W"
