--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,12 +15,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-cpu'              # Display CPU performance
 set -g @plugin 'tmux-plugins/tmux-open'             # Open links from tmux - Select path and press o
 set -g @plugin 'tmux-plugins/tmux-yank'             # Copy to system clipboard
-set -g @plugin 'tmux-plugins/tmux-battery'          # Battery status in tmux
 set -g @plugin 'tmux-plugins/tmux-sensible'         # Sensible defaults
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'    # Display current tmux mode
 
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
