nvim, qtile, tmux, zsh

--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -8,6 +8,8 @@ bind R source-file "$tmux_dir/tmux.conf"
 bind * list-clients
 bind w list-windows
 
+bind b command-prompt -p "New Session:" "new-session -A -s '%%'"
+bind -n M-. switch-client -n
 bind a run-shell "edit-tmux-output"
 
 bind C-s display-popup -E "\
@@ -32,7 +34,6 @@ bind -n M-3 select-window -t 3
 bind -n M-4 select-window -t 4
 
 bind n command-prompt -p "New window name:" "new-window -n '%%'"
-
 ################# PANE MANAGEMENT #################
 # Move to pane
 bind -r h select-pane -L
