--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -17,6 +17,7 @@ bind C-s display-popup -E "\
     sed '/^$/d' |\
     fzf --border=none --reverse |\
     xargs tmux switch-client -t"
+bind C-a display-popup -E "/home/alexanek/.dotfiles/scripts/sessionizer.sh"
 
 ################# WINDOW MANAGEMENT #################
 bind r command-prompt "rename-window %%"
