--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -24,32 +24,25 @@ bind r command-prompt "rename-window %%"
 bind -n M-Left  previous-window
 bind -n M-Right next-window
 
-# Move Windows
-bind -n M-S-Left swap-window -t -1\; select-window -t -1
-bind -n M-S-Right swap-window -t +1\; select-window -t +1
-
 # Select Windows
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
 bind -n M-3 select-window -t 3
 bind -n M-4 select-window -t 4
 
-bind n command-prompt -p "New window name:" "new-window -n '%%'"
+bind n new-window
 ################# PANE MANAGEMENT #################
-# Move to pane
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+# Resize pane
+bind -r h resize-pane -L 10
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 10
+
 # Split panes
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 bind "'" kill-pane -a                  # Kill all panes except for the current one
-
-# tmux-sessionizer
-# bind -n M-a display-popup -h 70% -w 85% -E "tmux-sessionizer"
-
 
 ########################## VIM ########################## 
 bind -n S-Enter send-keys Escape "[13;2u"
