--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -14,7 +14,5 @@ blur-background-exclude = [
 
 # Application-specific settings; these override the default `active-opacity`
 opacity-rule = [
-    "100:class_g = 'scratch'",
-    "85:class_g = 'Alacritty'",
-    "90:class_g = 'WebApp-Teams3693'"
+    "85:class_g = 'Alacritty'"
 ];
