--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -1,5 +1,5 @@
 ################################################################ 
-# Note: that the -n means we can ignore the ctrl-a prefix
+# Note: that the -n means we can ignore the ctrl-f prefix
 
 set -g prefix ^F
 set -g xterm-keys on
