--- a/tmux/conf/tmux.skin.conf
+++ b/tmux/conf/tmux.skin.conf
@@ -1,3 +1,5 @@
+#################################### ONEDARK ###################################
+
 color_bg="#2e323b"
 color_fg="#282c34"
 color_green="#98c379"
