--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,8 +12,8 @@ source "$tmux_conf_dir/tmux.skin.conf"
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$tmux_plugins_dir"
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-cpu'              # Display CPU performance
-set -g @plugin 'tmux-plugins/tmux-sensible'         # Sensible defaults
-set -g @plugin 'MunifTanjim/tmux-mode-indicator'    # Display current tmux mode
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 
 run "$tmux_plugins_dir/tpm/tpm"
