--- a/tmux/conf/tmux.opts.conf
+++ b/tmux/conf/tmux.opts.conf
@@ -11,5 +11,5 @@ set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
-set -g set-clipboard on          # use system clipboard
+set -g set-clipboard on
 setw -g mode-keys vi
