--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -55,9 +55,9 @@ style = "Regular"
 x = 0
 y = 1
 
-[scrolling]
-history = 2000
-multiplier = 3
+# [scrolling]
+# history = 2000
+# multiplier = 3
 
 [selection]
 save_to_clipboard = true
