--- a/tmux/conf/tmux.skin.conf
+++ b/tmux/conf/tmux.skin.conf
@@ -3,6 +3,7 @@
 color_bg="#2e323b"
 color_fg="#282c34"
 color_green="#98c379"
+color_olive_green="#808000"
 color_yellow="#e5c07b"
 color_dark_yellow="#e5c07b"
 color_red="#e06c75"
