--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -12,12 +12,12 @@ bind b command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind -n M-. switch-client -n
 bind a run-shell "edit-tmux-output"
 
-bind C-s display-popup -E "\
+bind C-s display-popup -E -b none "\
     tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
     sed '/^$/d' |\
-    fzf --border=none --reverse |\
+    fzf --border=rounded --border-label='Sessions' --reverse --color='border:#808000' |\
     xargs tmux switch-client -t"
-bind C-a display-popup -E "$DOTFILES/scripts/tsessionizer.sh"
+bind C-a display-popup -E -b none "$DOTFILES/scripts/tsessionizer.sh"
 
 ################# WINDOW MANAGEMENT #################
 bind r command-prompt "rename-window %%"
