wp, tmux and overall

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -14,5 +14,6 @@ blur-background-exclude = [
 
 # Application-specific settings; these override the default `active-opacity`
 opacity-rule = [
-    "85:class_g = 'Alacritty'"
+    "85:class_g = 'Alacritty'",
+    "85:class_g = 'kitty'"
 ];
