--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -18,7 +18,7 @@ bind C-s display-popup -E -b none "\
     fzf --border=rounded --border-label='Sessions' --reverse --color='border:#808000' |\
     xargs tmux switch-client -t"
 bind C-a display-popup -E -b none "$DOTFILES/scripts/tsessionizer.sh"
-
+bind-key -n M-a new-session -s "MISC" -c "$HOME"
 ################# WINDOW MANAGEMENT #################
 bind r command-prompt "rename-window %%"
 bind -n M-Left  previous-window
