--- a/tmux/conf/tmux.opts.conf
+++ b/tmux/conf/tmux.opts.conf
@@ -12,4 +12,5 @@ set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 5000        # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on
-setw -g mode-keys vi
+set-window-option -g mode-keys vi
+
