--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,33 +1,6 @@
-[colors]
-draw_bold_text_with_bright_colors = false
-
-[colors.bright]
-black = "#767676"
-blue = "#61afef"
-cyan = "#56b6c2"
-green = "#98c379"
-magenta = "#c678dd"
-red = "#e06c75"
-white = "#abb2bf"
-yellow = "#e5c07b"
-
-[colors.cursor]
-cursor = "#61afef"
-text = "#b1b8c5"
-
-[colors.normal]
-black = "#21252b"
-blue = "#61afef"
-cyan = "#56b6c2"
-green = "#98c379"
-magenta = "#c678dd"
-red = "#e06c75"
-white = "#abb2bf"
-yellow = "#e5c07b"
-
-[colors.primary]
-background = "#21252c"
-foreground = "#a2a8be"
+import = [
+    "~/.config/alacritty/themes/onedark.toml"
+]
 
 [env]
 TERM = "xterm-256color"
@@ -54,10 +27,6 @@ style = "Regular"
 [font.offset]
 x = 0
 y = 0
-
-# [scrolling]
-# history = 2000
-# multiplier = 3
 
 [selection]
 save_to_clipboard = true
