whoamip (custom script) in tmux bar

--- a/tmux/conf/tmux.skin_shared.conf
+++ b/tmux/conf/tmux.skin_shared.conf
@@ -33,6 +33,6 @@ set-window-option -g mode-style bg=$color_purple,fg=$color_bg
 #################################### FORMAT ####################################
 
 set -g status-left "#{tmux_mode_indicator}"
-set -g status-right "#[fg=$color_gray]CPU:#{cpu_percentage}  MEM:#{ram_percentage}   #[fg=$color_gray]%R"
+set -g status-right "#[fg=$color_gray]IP: #(whoamip)  CPU:#{cpu_percentage}  MEM:#{ram_percentage}   #[fg=$color_gray]%R"
 setw -g window-status-format "#[fg=$color_gray,italics]#I: #[noitalics]#W"
 setw -g window-status-current-format "#[fg=$color_purple,italics]#I: #[fg=$color_buffer,noitalics,bold]#W"
