--- a/tmux/conf/tmux.opts.conf
+++ b/tmux/conf/tmux.opts.conf
@@ -9,7 +9,7 @@ setw -g automatic-rename on
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
-set -g history-limit 5000        # increase history size (from 2,000)
+set -g history-limit 2000        # ~~increase history size (from 2,000)~~
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on
 set-window-option -g mode-keys vi
