--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -9,7 +9,7 @@ rounded-corners-exclude = [
 ]
 
 blur-background-exclude = [
-    "class_g = 'Screenkey'"
+    "class_g != 'Alacritty'"  # Apply blur to Alacritty only by excluding all others
 ];
 
 # Application-specific settings; these override the default `active-opacity`
