--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -15,10 +15,11 @@ bind a run-shell "edit-tmux-output"
 bind C-s display-popup -E -b none "\
     tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
     sed '/^$/d' |\
-    fzf --border=rounded --border-label='Sessions' --reverse --color='border:#808000' |\
+    fzf --border=rounded --border-label='Sessions' --reverse --color='border:#5A5F8C' |\
     xargs tmux switch-client -t"
 bind C-a display-popup -E -b none "$DOTFILES/scripts/tsessionizer.sh"
-bind g display-popup -E -b none "$DOTFILES/scripts/tsessionizer-worktrees.sh"
+bind g display-popup -e -b none "$dotfiles/scripts/tsessionizer-worktrees.sh"
+bind c display-popup -e -b
 bind-key -n M-a run-shell "$DOTFILES/scripts/tmisc.sh"
 
 ################# WINDOW MANAGEMENT #################
