--- a/tmux/conf/tmux.skin.conf
+++ b/tmux/conf/tmux.skin.conf
@@ -14,5 +14,6 @@ color_gray="#5c6370"
 color_buffer="#939aa3"
 color_selection="#3e4452"
 color_light_gray="#5c6370"
+color_light_purple="#5A5F8C"
 
 source "$tmux_conf_dir/tmux.skin_shared.conf"
