--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -18,7 +18,7 @@ bind C-s display-popup -E -b none "\
     fzf --border=rounded --border-label='Sessions' --reverse --color='border:#5A5F8C' |\
     xargs tmux switch-client -t"
 bind C-a display-popup -E -b none "$DOTFILES/scripts/tsessionizer.sh"
-bind g display-popup -e -b none "$dotfiles/scripts/tsessionizer-worktrees.sh"
+bind g display-popup -E -b none "$DOTFILES/scripts/tsessionizer-worktrees.sh"
 bind c display-popup -e -b
 bind-key -n M-a run-shell "$DOTFILES/scripts/tmisc.sh"
 
