--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -44,7 +44,7 @@ bind -r l resize-pane -R 10
 # Split panes
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
-
+bind -n M-z resize-pane -Z
 bind "'" kill-pane -a                  # Kill all panes except for the current one
 
 ########################## VIM ########################## 
