--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -9,7 +9,11 @@ bind * list-clients
 bind w list-windows
 
 bind b command-prompt -p "New Session:" "new-session -A -s '%%'"
+
 bind -n M-. switch-client -n
+bind -n M-, switch-client -p
+bind-key -n M-a run-shell "$DOTFILES/scripts/tmisc.sh"
+
 bind a run-shell "edit-tmux-output"
 
 bind C-s display-popup -E -b none "\
@@ -19,11 +23,11 @@ bind C-s display-popup -E -b none "\
     xargs tmux switch-client -t"
 bind C-a display-popup -E -b none "$DOTFILES/scripts/tsessionizer.sh"
 bind g display-popup -E -b none "$DOTFILES/scripts/tsessionizer-worktrees.sh"
-bind c display-popup -e -b
-bind-key -n M-a run-shell "$DOTFILES/scripts/tmisc.sh"
+bind -n M-c display-popup -h 80% -w 85% -e -b "gh dash"
 
 ################# WINDOW MANAGEMENT #################
 bind r command-prompt "rename-window %%"
+
 bind -n M-Left  previous-window
 bind -n M-Right next-window
 
@@ -40,11 +44,12 @@ bind -r h resize-pane -L 10
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 10
+bind -n M-z resize-pane -Z
 
 # Split panes
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
-bind -n M-z resize-pane -Z
+
 bind "'" kill-pane -a                  # Kill all panes except for the current one
 
 ########################## VIM ########################## 
