more nice features 2

--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -14,7 +14,7 @@ bind -n M-. switch-client -n
 bind -n M-, switch-client -p
 bind-key -n M-a run-shell "$DOTFILES/scripts/tmisc.sh"
 
-bind a run-shell "edit-tmux-output"
+bind a run-shell "$DOTFILES/scripts/edit-tmux-output.sh"
 
 bind C-s display-popup -E -b none "\
     tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
