--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -4,10 +4,10 @@
 set -g prefix ^F
 set -g xterm-keys on
 
+source-file "$tmux_dir/conf/tmux.copy.conf"
 bind R source-file "$tmux_dir/tmux.conf"
 bind * list-clients
 bind w list-windows
-
 bind b command-prompt -p "New Session:" "new-session -A -s '%%'"
 
 bind -n M-. switch-client -n
