--- a/tmux/modules/tmux.copy.conf
+++ b/tmux/modules/tmux.copy.conf
@@ -1,6 +1,6 @@
 ########################## COPY MODE ##########################
-# Enter copy mode with prefix+[
-bind [ copy-mode
+# Enter copy mode with alt+$
+bind  -n M-$ copy-mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
