--- a/tmux/modules/tmux.skin.conf
+++ b/tmux/modules/tmux.skin.conf
@@ -16,4 +16,4 @@ color_selection="#3e4452"
 color_light_gray="#5c6370"
 color_light_purple="#5A5F8C"
 
-source "$tmux_conf_dir/tmux.skin_shared.conf"
+source "$tmux_modules_dir/tmux.skin_shared.conf"
