--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,12 @@
 #################################### OPTIONS ###################################
 tmux_dir="~/.config/tmux"
-tmux_conf_dir="$tmux_dir/conf"
+tmux_modules_dir="$tmux_dir/modules"
 tmux_plugins_dir="$tmux_dir/plugins"
 
 ################################## CONF FILES ##################################
-source "$tmux_conf_dir/tmux.opts.conf"
-source "$tmux_conf_dir/tmux.keybind.conf"
-source "$tmux_conf_dir/tmux.skin.conf"
+source "$tmux_modules_dir/tmux.opts.conf"
+source "$tmux_modules_dir/tmux.keybind.conf"
+source "$tmux_modules_dir/tmux.skin.conf"
 
 #################################### PLUGINS ###################################
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$tmux_plugins_dir"
