--- a/tmux/modules/bindings/tmux.pane.conf
+++ b/tmux/modules/bindings/tmux.pane.conf
@@ -9,4 +9,4 @@ bind -n M-z resize-pane -Z
 # Split panes
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
-bind "'" kill-pane -a                  # Kill all panes except for the current one
+bind "'" kill-pane -a
