--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,8 +5,8 @@ tmux_plugins_dir="$tmux_dir/plugins"
 
 ################################## CONF FILES ##################################
 source "$tmux_modules_dir/tmux.opts.conf"
-source "$tmux_modules_dir/tmux.keybind.conf"
-source "$tmux_modules_dir/tmux.skin.conf"
+source "$tmux_modules_dir/bindings/tmux.keybind.conf"
+source "$tmux_modules_dir/ui/tmux.ui.conf"
 
 #################################### PLUGINS ###################################
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$tmux_plugins_dir"
